--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              {
-                "input": "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
-              },
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/assets/styles/styles.scss"
             ],
             "scripts": []
@@ -79,9 +77,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              },
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -144,6 +140,7 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ngrx/schematics"
+    "defaultCollection": "@ngrx/schematics",
+    "analytics": "9c6009f3-d337-4cee-b2fd-235591f7fcd2"
   }
 }
